Updated flexbox component to support column/row gaps.

--- a/packages/reflecta-components/src/components/ButtonComponent/styles.scss
+++ b/packages/reflecta-components/src/components/ButtonComponent/styles.scss
@@ -26,6 +26,7 @@ $letter-spacing: 0.05em;
         letter-spacing: $letter-spacing;
 
         border-radius: $border-radius-small;
+        box-shadow: $box-shadow-200;
 
         &-icon-only {
             padding: $padding-small $padding-medium;
