--- a/packages/reflecta-components/src/components/CardComponent/styles.scss
+++ b/packages/reflecta-components/src/components/CardComponent/styles.scss
@@ -5,5 +5,5 @@
 
     background-color: $color-neutral-100;
     border-radius: $border-radius-large;
-    box-shadow: $box-shadow-default;
+    box-shadow: $box-shadow-300;
 }
