--- a/packages/reflecta-components/src/components/InputComponent/styles.scss
+++ b/packages/reflecta-components/src/components/InputComponent/styles.scss
@@ -15,6 +15,7 @@
         background-color: $color-neutral-200;
         border: solid 1px $color-neutral-500;
         border-radius: $border-radius-small;
+        box-shadow: $box-shadow-100;
     }
 
     &--disabled {
