--- a/packages/reflecta-components/src/components/JournalEntryInputComponent/styles.scss
+++ b/packages/reflecta-components/src/components/JournalEntryInputComponent/styles.scss
@@ -1,9 +1,10 @@
 @import '../../styles/styles';
 
-@mixin divider {
+%divider {
     border-bottom: solid 1px $color-neutral-300;
 }
-@mixin input {
+
+%input {
     font-size: $font-size-regular;
 
     background-color: transparent;
@@ -15,7 +16,7 @@
     width: 100%;
 
     &__input {
-        @include divider ();
+        @extend %divider;
 
         width: 100%;
         padding-top: $margin-small;
@@ -26,7 +27,7 @@
         }
 
         input {
-            @include input ();
+            @extend %input;
 
             flex-grow: 1;
             height: calc($planck-length * 5);
@@ -36,8 +37,8 @@
     }
 
     &__textarea {
-        @include divider ();
-        @include input ();
+        @extend %divider;
+        @extend %input;
 
         width: 100%;
         height: 100vh;
