--- a/packages/reflecta-components/src/components/_internal/ColorPalette/styles.scss
+++ b/packages/reflecta-components/src/components/_internal/ColorPalette/styles.scss
@@ -1,8 +1,12 @@
 @import '../../../styles/styles';
 
 .ColorPaletteComponent {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     max-width: calc($planck-length * 100);
+
+    row-gap: $margin-large;
 }
 
 .ColorItemComponent {
@@ -10,7 +14,8 @@
         display: flex;
         justify-content: space-between;
         width: 100%;
-        margin-bottom: $margin-large;
+
+        column-gap: $margin-medium;
     }
 
     &__swatch-container {
@@ -19,7 +24,6 @@
         justify-content: space-between;
         width: 100%;
         height: calc($planck-length * 20);
-        margin-right: $margin-medium;
         padding: $padding-small;
         overflow: hidden;
 
@@ -27,11 +31,7 @@
 
         background-color: $color-neutral-100;
         border-radius: $border-radius-medium;
-        box-shadow: $box-shadow-default;
-
-        &:last-of-type {
-            margin-right: 0;
-        }
+        box-shadow: $box-shadow-300;
     }
 
     &__swatch {
