--- a/packages/reflecta-components/src/components/_internal/StorybookExampleComponent/styles.scss
+++ b/packages/reflecta-components/src/components/_internal/StorybookExampleComponent/styles.scss
@@ -5,19 +5,11 @@
     max-width: calc($planck-length * 100);
 
     &__card {
+        gap: $margin-medium;
         padding: $padding-medium $padding-medium $padding-large;
 
         background-color: $color-neutral-100;
         border-radius: $border-radius-small;
         box-shadow: 1px 1px 2px $color-neutral-400;
-
-        & > * {
-            margin-top: $margin-medium;
-            margin-right: $margin-medium;
-
-            &:last-of-type {
-                margin-right: 0;
-            }
-        }
     }
 }
