--- a/packages/reflecta-components/src/styles/_stylings.scss
+++ b/packages/reflecta-components/src/styles/_stylings.scss
@@ -4,8 +4,10 @@ $border-radius-medium: $planck-length;
 $border-radius-large: calc($planck-length * 2);
 
 // Box Shadows
-$box-shadow-default: calc($planck-length / 2) calc($planck-length / 2) $planck-length $color-neutral-300;
-$box-shadow-dark: calc($planck-length / 2) calc($planck-length / 2) $planck-length calc($planck-length / 2) $color-neutral-400;
+$box-shadow-100: 3px 3px 6px $color-neutral-300;
+$box-shadow-200: 3px 3px 6px $color-neutral-400;
+$box-shadow-300: calc($planck-length / 2) calc($planck-length / 2) $planck-length $color-neutral-300;
+$box-shadow-400: calc($planck-length / 2) calc($planck-length / 2) $planck-length calc($planck-length / 2) $color-neutral-400;
 
 // Opacities
 $opacity-disabled: 0.35;
