--- a/packages/reflecta-components/src/components/FlexboxComponent/styles.scss
+++ b/packages/reflecta-components/src/components/FlexboxComponent/styles.scss
@@ -57,7 +57,7 @@ $row-gap-options: (
     }
 
     &__desktop {
-        @media only screen and (min-width: $breakpoint-begin-medium) {
+        @include is-desktop() {
             &--height-full {
                 height: 100%;
             }
