Configured loading, navigation, and journal entry.

--- a/packages/reflecta-components/src/styles/_units.scss
+++ b/packages/reflecta-components/src/styles/_units.scss
@@ -18,6 +18,7 @@ $max-width-large: 960px;
 $max-width-xlarge: 1140px;
 
 // Global Z-Index Ranking
+$z-index-loading: 99999;
 $z-index-modal: 9999;
 $z-index-popover: 9998;
 $z-index-navigation: 9997;
