--- a/packages/reflecta-components/src/styles/_helpers.scss
+++ b/packages/reflecta-components/src/styles/_helpers.scss
@@ -103,3 +103,12 @@
         font-size: $value;
     }
 }
+
+// Display
+.display--inline {
+    display: inline;
+}
+
+.display--inline-block {
+    display: inline-block;
+}
