--- a/packages/reflecta-components/src/styles/_spacings.scss
+++ b/packages/reflecta-components/src/styles/_spacings.scss
@@ -7,3 +7,4 @@ $padding-large: calc($planck-length * 4);
 $margin-small: $planck-length;
 $margin-medium: calc($planck-length * 2);
 $margin-large: calc($planck-length * 4);
+$margin-xlarge: calc($planck-length * 6);
